--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">KODE</string>
     <string name="input_name_teg_email">Input Name, teg, email...</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="er_msg_1">Какой-то сверхразум все сломал</string>
     <string name="err_msg_2">Постараемся быстро починить</string>
     <string name="err_msg_3">Попробовать снова</string>
+    <string name="sorted_alphabet">По алфавиту</string>
+    <string name="sorted_birthday">По дню рождения</string>
 </resources>
